--- a/style.css
+++ b/style.css
@@ -5,13 +5,20 @@ body{
 #banner{
         width: 100%;
 }
+h1{
+    text-align: center;
+}
 p{
     text-align: center;
 }
+#
 
 em strong{
     color: #ff0000
 }
 .itens {
     font-style: italic;
+}
+h2 {
+    text-align: center;
 }
